# plugin-utils

./: .gitignore  Cargo.toml  LICENSE  README.md
dsp-utils/: Cargo.toml
dsp-utils/src/: algorithms.rs  benchmark.rs  core.rs  lib.rs  mdct.rs  misc.rs  plotter.rs
dsp-utils/src/algorithms/: filter.rs  mdct.rs  pitch_shift.rs  window.rs
dsp-utils/src/algorithms/filter/: chamberlin_approx.rs  low_pass.rs
dsp-utils/src/algorithms/mdct/: dct.rs
dsp-utils/src/core/: file_processing.rs  points_processing.rs  sample_plugins.rs
dsp-utils/src/plotter/: file_processing.rs  points_processing.rs
egui-utils/: Cargo.toml
egui-utils/examples/widgets_playground/: main.rs  widgets_playground.rs
egui-utils/examples/widgets_playground/widgets_playground/: editor.rs  params.rs
egui-utils/examples/widgets_playground/widgets_playground/editor/: style.rs
egui-utils/src/: image_macros.rs  lib.rs  widgets.rs
egui-utils/src/widgets/: checkbox.rs  knob.rs  style.rs
examples/widgets_playground/widgets_playground/: editor.rs  params.rs
src/: lib.rs
