[package]
name = "plugin-utils"
version = "0.1.1"
edition = "2021"

authors = ["Garneek"]
description = "Utility functions for nih_plug"
license = "GNU General Public License v3.0"

[features]
test = ["dsp-utils/test"]

[dependencies]
dsp-utils = {path = "dsp-utils"}
egui-utils = {path = "egui-utils"}

nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "de315f902d7b5a75f80bc9d4164e4485bf2b34a1", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "de315f902d7b5a75f80bc9d4164e4485bf2b34a1" }


[workspace]
members = [
  "dsp-utils",
  "egui-utils",
]

[lib]
path = "src/lib.rs"
doctest = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

