[package]
name = "dsp-utils"
version = "0.2.1"
edition = "2021"

authors = ["Garneek"]
description = "DSP utility functions for nih_plug"
license = "GNU General Public License v3.0"

[features]
default = []
test = ["dep:plotters", "dep:creek"]


[dependencies]
nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51", features = ["assert_process_allocs"] }

plotters = { version = "0.3.7", optional = true }
creek = { version = "1.1.2", features = ["decode-mp3"], optional = true }

[lib]
path = "src/lib.rs"
doctest = false


[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
