[package]
name = "egui-utils"
version = "0.1.0"
edition = "2021"

authors = ["Garneek"]
description = "egui widgets and utility functions for nih_plug"
license = "GNU General Public License v3.0"

[dependencies]
nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "de315f902d7b5a75f80bc9d4164e4485bf2b34a1", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "de315f902d7b5a75f80bc9d4164e4485bf2b34a1" }

image = {version = "0.25.5", features = ["png"]}
lazy_static = "1.4.0"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

