[package]
name = "egui-utils"
version = "0.1.1"
edition = "2021"

authors = ["Garneek"]
description = "egui widgets and utility functions for nih_plug"
license = "GNU General Public License v3.0"

[dependencies]
nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51" }

image = {version = "0.25.5", features = ["png"]}
lazy_static = "1.4.0"

[lib]
path = "src/lib.rs"
doctest = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

